Started Keep it sharp and Crush Skulls

--- a/blackSwamp.html
+++ b/blackSwamp.html
@@ -161,10 +161,10 @@
                           <a href="#honorInBattle">Honor in Battle</a>
                       </li>
                       <li>
-                          <a href="#"></a>
+                          <a href="#keepItSharp">Keep it Sharp</a>
                       </li>
                       <li>
-                          <a href="#"></a>
+                          <a href="#crushSkulls">Crush Skulls</a>
                       </li>
                       <li>
                           <a href="#"></a>
@@ -702,8 +702,156 @@
                   </div>
                 </div>
               </div>
-              <!-- End of Protect Krog! -->
+              <!-- End of Honor in Battle! -->
               <div class="line"></div>
+              <!-- Start of Keep it Sharp -->
+              <div class="card bg-main half-width mb-5">
+                <div class="card-header">
+                  <h2 id="keepItSharp" class="anchor text-center">Keep it Sharp</h2>
+                </div>
+                <div>
+                  <div class="card-body">
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                        <tr>
+                          <th>Difficulty</th>
+                          <th>Skills</th>
+                        </thead>    
+                        </tr>
+                        <tr>
+                          <td>Apprentice</td>
+                          <td>Combat <br>
+                              lvl 15 Axes
+                          </td>                        
+                    </table>
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                        <tr>
+                          <th>NPC Quest Start</th>
+                          <th>Monsters</th>
+                          <th>Reward</th>
+                        </thead>    
+                        </tr>
+                        <tr>
+                          <td>
+                            Tyugh Bruurshk
+                          </td>
+                          <td>
+                            Orc Renegade Mage (25)
+                          </td>
+                          <td>
+                            <img class="thumbnail-img" src="Images/BlackSwamp/Crude_Orcish_Battle_Axe.png" alt="Crude Orcish Sword" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/BlackSwamp/Crude_Orcish_Battle_Axe_Stats.png' alt='Crude Orcish Battle Axe Stats'>">
+                            <img class="thumbnail-img" src="Images/BlackSwamp/" alt="Orcish Warrior " tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/BlackSwamp/Orcish_Warrior_Belt_Stats.png' alt='Orcish Warrior Belt Stats'>">
+
+                          </td>                        
+                    </table>
+
+                    <hr>
+                    <p class="clearfix">
+                        <img class="npc-img" src="Images/BlackSwamp/Tyugh_Bruurshk.png" alt="Tyugh Bruurshk">
+                        Speak to <span class="light-red">Tyugh Bruurshk</span>, he will only speak to you if you have 15 in your axe skill. If you are lvl 15 in your axes skill he will teach you the way of an axe user.
+                        He will task you to hack apart 50 Orc Renegade Mages with the Crude Orcish Battle Axe.
+                        <hr>
+                        <ul>
+                          <li><i class="fas fa-caret-right"></i><span class="ml-2 green">Crude Orcish Battle Axe</span></li>
+                        </ul>
+                        <hr>                                            
+                        <span class="green">QUEST RECEIVED:</span><span class="red"> Keep it Sharp</span><span class="orange">, Hack apart 50 Orc Renegade Mages with the Crude Orcish Battle Axe for Tyugh Bruurshk of Krog.</span>
+                        <br>
+                        Head east though the mountain pass to the shore then head north, you will find Orc Renegades and Orc Renegade Mages. Check this map of the locaion. <img class="monster-img" src="Images/BlackSwamp/Orc_Renegade_Map_Location.png" alt="Orc Renegade Map Location"> As you hack apart <span class="red">Orc Renegade Mages</span> <img class="monster-img" src="Images/NPC/Monsters/Orc_Renegade_Mage.png" alt="Orc Renegade Mage"> you will be updated <span class="green">You have hacked X Orc Renegade Mages for Tyugh Bruurshk!</span>
+                        If you kill one with out the Crude Orcish Battle Axe you will be updated with a warning, <span class="red">You must equip the Crude Orcish Battle Axe to complete Tyugh's training.</span> Once you have killed 50 you will be updated.
+                        <br>
+                        <span class="green">QUEST UPDATE:</span><span class="red"> Keep it Sharp</span><span class="orange">, Return to Tyugh Bruurshk in Krog to complete your training.</span>  
+                        Speak to Tyugh Bruurshk he will reward you with the Orcish Warrior .
+                        <hr>
+                        <ul>
+                          <li><i class="fas fa-caret-right"></i><span class="ml-2 green">Orcish Warrior ??</span></li>
+                          <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">??</strong> Experience Pool <span class="light-red">experience may very</span></li>
+                        </ul>
+                        <hr>
+                        axe Tyugh Bruurshk.  
+                    </p>
+                        
+                  </div>
+                </div>
+              </div>
+              <!-- End of Keep it Sharp -->
+              <div class="line"></div>
+              <!-- Start of Crush Skulls -->
+              <div class="card bg-main half-width mb-5">
+                <div class="card-header">
+                  <h2 id="crushSkulls" class="anchor text-center">Crush Skulls</h2>
+                </div>
+                <div>
+                  <div class="card-body">
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                        <tr>
+                          <th>Difficulty</th>
+                          <th>Skills</th>
+                        </thead>    
+                        </tr>
+                        <tr>
+                          <td>Apprentice</td>
+                          <td>Combat <br>
+                              lvl 15 Blunt Weapons
+                          </td>                        
+                    </table>
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                        <tr>
+                          <th>NPC Quest Start</th>
+                          <th>Monsters</th>
+                          <th>Reward</th>
+                        </thead>    
+                        </tr>
+                        <tr>
+                          <td>
+                            Ulver Muurnahknahk
+                          </td>
+                          <td>
+                            Orc Renegade (11)
+                          </td>
+                          <td>
+                            <img class="thumbnail-img" src="Images/BlackSwamp/Crude_Orcish_Skullcrusher.png" alt="Crude Orcish Skullcrusher" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/BlackSwamp/Crude_Orcish_Skullcrusher_Stats.png' alt='Crude Orcish Skullcrusher Stats'>">
+                            <img class="thumbnail-img" src="Images/BlackSwamp/" alt="Orcish Warrior " tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/BlackSwamp/Orcish_Warrior_Belt_Stats.png' alt='Orcish Warrior Belt Stats'>">
+
+                          </td>                        
+                    </table>
+
+                    <hr>
+                    <p class="clearfix">
+                        <img class="npc-img" src="Images/BlackSwamp/Ulver_Muurnahknahk.png" alt="Ulver Muurnahknahk">
+                        Speak to <span class="light-red">Ulver Muurnahknahk</span>, he will only speak to you if you have 15 in your blunt weapons skill. If you are lvl 15 in your blunt weapons skill he will teach you the way of a blunt weapon user.
+                        He will task you to smash 100 Orc Renegades with the Crude Orcish Skullcrusher.
+                        <hr>
+                        <ul>
+                          <li><i class="fas fa-caret-right"></i><span class="ml-2 green">Crude Orcish Skullcrusher</span></li>
+                        </ul>
+                        <hr>                                            
+                        <span class="green">QUEST RECEIVED:</span><span class="red"> Crush Skulls</span><span class="orange">, Smash 100 Orc Renegades with the Crude Orcish Skullcrusher for Ulver Muurnahknahk of Maraket.</span>
+                        <br>
+                        Head east to the shore then head north, you will find Orc Renegades and Orc Renegade Mages. Check this map of the locaion. <img class="monster-img" src="Images/BlackSwamp/Orc_Renegade_Map_Location.png" alt="Orc Renegade Map Location"> As you smash <span class="red">Orc Renegades</span> <img class="monster-img" src="Images/NPC/Monsters/Orc_Renegade.png" alt="Orc Renegade"> you will be updated <span class="green">You have smashed X Orc Renegades for Ulver Muurnahknahk!</span>
+                        If you kill one with out the Crude Orcish Skullcrusher you will be updated with a warning, <span class="red">You must equip the Crude Orcish Skullcrusher to complete Ulver's training.</span> Once you have killed 100 you will be updated.
+                        <br>
+                        <span class="green">QUEST UPDATE:</span><span class="red"> Crush Skulls </span><span class="orange">, Return to Ulver Muurnahknahk in Maraket to complete your training.</span>  
+                        Speak to Ulver Muurnahknahk he will reward you with the Orcish Warrior .
+                        <hr>
+                        <ul>
+                          <li><i class="fas fa-caret-right"></i><span class="ml-2 green">Orcish Warrior ??</span></li>
+                          <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">??</strong> Experience Pool <span class="light-red">experience may very</span></li>
+                        </ul>
+                        <hr>
+                        Blunt Weapons Ulver Muurnahknahk.  
+                    </p>
+                        
+                  </div>
+                </div>
+              </div>
+              <!-- End of Crush Skulls -->
+              <div class="line"></div>
+
+
 
               <footer class="jumbotron text-center">
               <a href="https://keithheffington.com" target="_blank"><p>Designed by Keith Heffington</p></a>
