--- a/blackSwamp.html
+++ b/blackSwamp.html
@@ -290,24 +290,24 @@
                             Many different creatures                            
                           </td>
                           <td>
-                          <img class="thumbnail-img" src="Images/BlackSwamp/Necklace_of_Krog.png" alt="Necklace of Krog" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/BlackSwamp/Necklace_of_Krog_Stats.png' alt='Necklace of Krog Stats'>">
-                          <img class="thumbnail-img" src="Images/BlackSwamp/Ring_of_Krog.png" alt="Ring of Krog" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/BlackSwamp/Ring_of_Krog_Stats.png' alt='Ring of Krog Stats'>">
-                          <img class="thumbnail-img" src="Images/BlackSwamp/Gloves_of_Krog.png" alt="Gloves of Krog" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/BlackSwamp/Gloves_of_Krog_Stats.png' alt='Gloves of Krog Stats'>">
-                          <img class="thumbnail-img" src="Images/BlackSwamp/Belt_of_Krog.png" alt="Belt of Krog" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/BlackSwamp/Belt_of_Krog_Stats.png' alt='Belt of Krog Stats'>"> 
-                          <img class="thumbnail-img" src="Images/BlackSwamp/Helm_of_Krog.png" alt="Helm of Krog" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/BlackSwamp/Helm_of_Krog_Stats.png' alt='Helm of Krog'>">
-                          <img class="thumbnail-img" src="Images/BlackSwamp/Boots_of_Krog.png" alt="Boots of Krog" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/BlackSwamp/Boots_of_Krog_Stats.png' alt='Boots of Krog Stats'>">
-                          <img class="thumbnail-img" src="Images/BlackSwamp/Cloak_of_Krog.png" alt="Cloak of Krog" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/BlackSwamp/Cloak_of_Krog_Stats.png' alt='Cloak of Krog Stats'>">
-                          <img class="thumbnail-img" src="Images/BlackSwamp/Guardian_of_Krog.png" alt="Guardian of Krog" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/BlackSwamp/Guardian_of_Krog_Stats.png' alt='Guardian of Krog Stats'>">
-                          <img class="thumbnail-img" src="Images/BlackSwamp/Leggings_of_Krog.png" alt="Leggings of Krog" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/BlackSwamp/Leggings_of_Krog_Stats.png' alt='Leggings of Krog Stats'>">
-                          <img class="thumbnail-img" src="Images/BlackSwamp/Armor_of_Krog.png" alt="Armor of Krog" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/BlackSwamp/Armor_of_Krog_Stats.png' alt='Armor of Krog Stats'>">
+                          <img class="thumbnail-img" src="Images/BlackSwamp/Warrior_of_Krog_Necklace_of_Krog.png" alt="Necklace of Krog" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/BlackSwamp/Warrior_of_Krog_Necklace_of_Krog_Stats.png' alt='Necklace of Krog Stats'>">
+                          <img class="thumbnail-img" src="Images/BlackSwamp/Warrior_of_Krog_Ring_of_Krog.png" alt="Ring of Krog" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/BlackSwamp/Warrior_of_Krog_Ring_of_Krog_Stats.png' alt='Ring of Krog Stats'>">
+                          <img class="thumbnail-img" src="Images/BlackSwamp/Warrior_of_Krog_Gloves_of_Krog.png" alt="Gloves of Krog" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/BlackSwamp/Warrior_of_Krog_Gloves_of_Krog_Stats.png' alt='Gloves of Krog Stats'>">
+                          <img class="thumbnail-img" src="Images/BlackSwamp/Warrior_of_Krog_Belt_of_Krog.png" alt="Belt of Krog" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/BlackSwamp/Warrior_of_Krog_Belt_of_Krog_Stats.png' alt='Belt of Krog Stats'>"> 
+                          <img class="thumbnail-img" src="Images/BlackSwamp/Warrior_of_Krog_Helm_of_Krog.png" alt="Helm of Krog" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/BlackSwamp/Warrior_of_Krog_Helm_of_Krog_Stats.png' alt='Helm of Krog'>">
+                          <img class="thumbnail-img" src="Images/BlackSwamp/Warrior_of_Krog_Boots_of_Krog.png" alt="Boots of Krog" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/BlackSwamp/Warrior_of_Krog_Boots_of_Krog_Stats.png' alt='Boots of Krog Stats'>">
+                          <img class="thumbnail-img" src="Images/BlackSwamp/Warrior_of_Krog_Cloak_of_Krog.png" alt="Cloak of Krog" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/BlackSwamp/Warrior_of_Krog_Cloak_of_Krog_Stats.png' alt='Cloak of Krog Stats'>">
+                          <img class="thumbnail-img" src="Images/BlackSwamp/Warrior_of_Krog_Guardian_of_Krog.png" alt="Guardian of Krog" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/BlackSwamp/Warrior_of_Krog_Guardian_of_Krog_Stats.png' alt='Guardian of Krog Stats'>">
+                          <img class="thumbnail-img" src="Images/BlackSwamp/Warrior_of_Krog_Leggings_of_Krog.png" alt="Leggings of Krog" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/BlackSwamp/Warrior_of_Krog_Leggings_of_Krog_Stats.png' alt='Leggings of Krog Stats'>">
+                          <img class="thumbnail-img" src="Images/BlackSwamp/Warrior_of_Krog_Armor_of_Krog.png" alt="Armor of Krog" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/BlackSwamp/Warrior_of_Krog_Armor_of_Krog_Stats.png' alt='Armor of Krog Stats'>">
                           <br>                        
                         </td>                        
                     </table>
 
                     <hr>
                     <p class="clearfix">
-                        <img class="npc-img" src="Images/BlackSwamp/Targon.png" alt="Targon">
-                        Speak to <span class="light-red">Targon</span> he will not speak to those not aligned with Krog. You must speak with the <span class="light-red">Krog Steward</span>. He is located next to the spawn gate. <img class="monster-img" src="Images/BlackSwamp/Krog_Steward.png" alt="Krog Steward"> He asks if you will join Krog and help protect the city. If you join Krog 
+                        <img class="npc-img" src="Images/BlackSwamp/Warrior_of_Krog_Targon.png" alt="Targon">
+                        Speak to <span class="light-red">Targon</span> he will not speak to those not aligned with Krog. You must speak with the <span class="light-red">Krog Steward</span>. He is located next to the spawn gate. <img class="monster-img" src="Images/BlackSwamp/Warrior_of_Krog_Krog_Steward.png" alt="Krog Steward"> He asks if you will join Krog and help protect the city. If you join Krog 
                         you will be stronger with 1 extra orb of Strength. You will be able to reach 101. Once you make this choice you cannot change your mind. If you chose Krog you will be rewarded. 
                         
                         <hr>
@@ -320,7 +320,7 @@
                         <span class="green">QUEST RECEIVED:</span><span class="red"> Warrior of Krog</span><span class="orange">, Lord Targon of Krog asks you to slay x amount of Creatures.</span>
                     </p>
                     <p>
-                        <img class="npc-img"src="Images/BlackSwamp/Targon.png" alt="Targon">
+                        <img class="npc-img"src="Images/BlackSwamp/Warrior_of_Krog_Targon.png" alt="Targon">
                         Speak to <span class="light-red">Targon</span>, he now calls you a loyal servant of Krog. He needs brave warriors willing to seek out and slay the foul creatures that plague us. He ask if you are willing to help. If you accept his request he will ask you to slay different amounts and types of creatues for him.
                         His rewards are experience points and Faction points. His quest are repeatable to gain more experiance and Faction points for the city. When slaying the creatures you will be updated <span class="green">QUEST UPDATE: Kill X more Creature for Lord Targon of Krog</span>. When you have slain all of the creatures required 
                         you will be updated. 
@@ -338,7 +338,7 @@
                         <hr>
                     </p>
                     <p>
-                      <img class="npc-img" src="Images/BlackSwamp/Lady_Targon.png" alt="Lady Targon">
+                      <img class="npc-img" src="Images/BlackSwamp/Warrior_of_Krog_Lady_Targon.png" alt="Lady Targon">
                       Follow the path south to Maraket and Speak to <span class="light-red">Lady Targon</span> in the bank. She will greet you and reward you for you loyal patronage. Your reward are pieces of the Krog Armor. You will recieve a new pieces at diffent stages of your faction points.
                       <hr>
                         <ul>
@@ -740,8 +740,8 @@
                             Orc Renegade Mage (25)
                           </td>
                           <td>
-                            <img class="thumbnail-img" src="Images/BlackSwamp/Crude_Orcish_Battle_Axe.png" alt="Crude Orcish Sword" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/BlackSwamp/Crude_Orcish_Battle_Axe_Stats.png' alt='Crude Orcish Battle Axe Stats'>">
-                            <img class="thumbnail-img" src="Images/BlackSwamp/" alt="Orcish Warrior " tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/BlackSwamp/Orcish_Warrior_Belt_Stats.png' alt='Orcish Warrior Belt Stats'>">
+                            <img class="thumbnail-img" src="Images/BlackSwamp/Crude_Orcish_Battle_Axe.png" alt="Crude Orcish Axe" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/BlackSwamp/Crude_Orcish_Battle_Axe_Stats.png' alt='Crude Orcish Battle Axe Stats'>">
+                            <img class="thumbnail-img" src="Images/BlackSwamp/Orcish_Warrior_Gauntlets.png" alt="Orcish Warrior Gauntlets" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/BlackSwamp/Orcish_Warrior_Belt_Stats.png' alt='Orcish Warrior Gauntlets Stats'>">
 
                           </td>                        
                     </table>
@@ -765,11 +765,11 @@
                         Speak to Tyugh Bruurshk he will reward you with the Orcish Warrior .
                         <hr>
                         <ul>
-                          <li><i class="fas fa-caret-right"></i><span class="ml-2 green">Orcish Warrior ??</span></li>
-                          <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">??</strong> Experience Pool <span class="light-red">experience may very</span></li>
+                          <li><i class="fas fa-caret-right"></i><span class="ml-2 green">Orcish Warrior Gauntlets</span></li>
+                          <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">26,400</strong> Experience Pool <span class="light-red">experience may very</span></li>
                         </ul>
                         <hr>
-                        axe Tyugh Bruurshk.  
+                        You have received training in the art of axe combat from Tyugh Bruurshk.  
                     </p>
                         
                   </div>
