Competed the Stay back Quest

--- a/blackSwamp.html
+++ b/blackSwamp.html
@@ -167,7 +167,7 @@
                           <a href="#crushSkulls">Crush Skulls</a>
                       </li>
                       <li>
-                          <a href="#"></a>
+                          <a href="#stayBack">Stay Back</a>
                       </li>
                       <li>
                           <a href="#"></a>
@@ -457,7 +457,7 @@
                             Fire Ant (lvl 8)
                           </td>
                           <td>
-                            <img class="thumbnail-img" src="Images/BlackSwamp/Formidable_Formicidae_Fire_Ant_Leg_Bracer.png" alt="Ant Leg Bracer" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/BlackSwamp/Fire_Ant_Leg_Bracer_Stats.png' alt='Ant Leg Bracer Stats'>">
+                            <img class="thumbnail-img" src="Images/BlackSwamp/Formidable_Formicidae_Fire_Ant_Leg_Bracer.png" alt="Ant Leg Bracer" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/BlackSwamp/Formidable_Formicidae_Fire_Ant_Leg_Bracer_Stats.png' alt='Ant Leg Bracer Stats'>">
                             <img class="thumbnail-img" src="Images/BlackSwamp/Gold.png" alt="Gold" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/BlackSwamp/Formidable_Formicidae_Gold_700.png' alt='Gold 700'>">
                           </td>                        
                     </table>
@@ -835,7 +835,7 @@
                         If you kill one with out the Crude Orcish Skullcrusher you will be updated with a warning, <span class="red">You must equip the Crude Orcish Skullcrusher to complete Ulver's training.</span> Once you have killed 100 you will be updated.
                         <br>
                         <span class="green">QUEST UPDATE:</span><span class="red"> Crush Skulls </span><span class="orange">, Return to Ulver Muurnahknahk in Maraket to complete your training.</span>  
-                        Speak to Ulver Muurnahknahk he will reward you with the Orcish Warrior .
+                        Speak to Ulver Muurnahknahk he will reward you with the Orcish Warrior Helm.
                         <hr>
                         <ul>
                           <li><i class="fas fa-caret-right"></i><span class="ml-2 green">Orcish Warrior Helm</span></li>
@@ -849,6 +849,81 @@
                 </div>
               </div>
               <!-- End of Crush Skulls -->
+              <div class="line"></div>
+              <!-- Start of Stay Back -->
+              <div class="card bg-main half-width mb-5">
+                <div class="card-header">
+                  <h2 id="stayBack" class="anchor text-center">Stay Back</h2>
+                </div>
+                <div>
+                  <div class="card-body">
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                        <tr>
+                          <th>Difficulty</th>
+                          <th>Skills</th>
+                        </thead>    
+                        </tr>
+                        <tr>
+                          <td>Apprentice</td>
+                          <td>Combat <br>
+                              lvl 15 Polearms
+                          </td>                        
+                    </table>
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                        <tr>
+                          <th>NPC Quest Start</th>
+                          <th>Monsters</th>
+                          <th>Reward</th>
+                        </thead>    
+                        </tr>
+                        <tr>
+                          <td>
+                            Umduhk Dumdumuhk
+                          </td>
+                          <td>
+                            Ghost (23)
+                          </td>
+                          <td>
+                            <img class="thumbnail-img" src="Images/BlackSwamp/Stay_Back_Crude_Orcish_Spear.png" alt="Crude Orcish Spear" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/BlackSwamp/Stay_Back_Crude_Orcish_Spear_Stats.png' alt='Crude Orcish Spear Stats'>">
+                            <img class="thumbnail-img" src="Images/BlackSwamp/Stay_Back_Orcish_Warrior_Cape.png" alt="Orcish Warrior Cape" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/BlackSwamp/Stay_Back_Orcish_Warrior_Cape_Stats.png' alt='Orcish Warrior Cape Stats'>">
+
+                          </td>                        
+                    </table>
+
+                    <hr>
+                    <p class="clearfix">
+                        <img class="npc-img" src="Images/BlackSwamp/Stay_Back_Umduhk_Dumdumuhk.png" alt="Ulver Muurnahknahk">
+                        Speak to <span class="light-red">Umduhk Dumdumuhk</span>, he will only speak to you if you have 15 in your polearms skill. If you are lvl 15 in your polearms skill he will teach you the way of a polearms user.
+                        He will task you to kill 50 ghost with the Crude Orcish Spear.
+                        <hr>
+                        <ul>
+                          <li><i class="fas fa-caret-right"></i><span class="ml-2 green">Crude Orcish Spear</span></li>
+                        </ul>
+                        <hr>                                            
+                        <span class="green">QUEST RECEIVED:</span><span class="red"> Stay Back</span><span class="orange">, Defeat 50 Ghost for Umduhk Dumdumuhk of Maraket with the Crude Orcish Spear.</span>
+                        <br>
+                        There is not a very good spawn of ghost in the Black Swamp area. The best place that is good for a low level player is Silvest area. Travel to the Lotor's Summer Palace Portal (LSP). <img class="npc-img" src="Images/Maps/Lotors_Summer_Palace_Portal.png" alt="Lotor's Summer Palace Portal"> When at LSP look for the Silvest Portal and enter.
+                        You be walking all the way to the Eastern side of the island. There is a town call East Watch you will come to when you get their. Now south of east watch is the Valley of the Dead, this is were you will find lots of Ghost. Check this map of the locaion. <img class="monster-img" src="Images/BlackSwamp/Stay_Back_Ghost_Location.png" alt="Ghost Map Location"> 
+                        As you defeat <span class="red">Ghost</span> <img class="monster-img" src="Images/NPC/Monsters/Ghost.png" alt="Ghost"> you will be updated <span class="green">You have killed X Ghost for Umduhk Dumdumuhk!</span>
+                        If you kill one with out the Crude Orcish Spear you will be updated with a warning, <span class="red">You must equip the Crude Orcish Spear to complete Umduhk's training.</span> Once you have killed 50 you will be updated.
+                        <br>
+                        <span class="green">QUEST UPDATE:</span><span class="red"> Stay Back</span><span class="orange">, Return to Umduhk Dumdumuhk in Maraket to collect your reward.</span>  
+                        Speak to Umduhk Dumdumuhk he will reward you with the Orcish Warrior Cape.
+                        <hr>
+                        <ul>
+                          <li><i class="fas fa-caret-right"></i><span class="ml-2 green">Orcish Warrior Cape</span></li>
+                          <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">26,400</strong> Experience Pool <span class="light-red">experience may very</span></li>
+                        </ul>
+                        <hr>
+                        You have received training in the art of polearm combatr from Umdumuhk.
+                    </p>
+                        
+                  </div>
+                </div>
+              </div>
+              <!-- End of Stay Back -->
               <div class="line"></div>
 
 
